<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lock.LockSetActivity">

    <LinearLayout
        android:id="@+id/ll_set_lock_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_set_pw_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/text_set_number_pw_6_title"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black">
        </TextView>

        <com.example.applicationlock.lock.widget.LockEditText
            android:id="@+id/let_number_pw_6"
            android:layout_width="match_parent"
            android:layout_height="50dp">
        </com.example.applicationlock.lock.widget.LockEditText>

        <com.example.applicationlock.lock.widget.ImageLockView
            android:id="@+id/il_set_pw"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:visibility="gone">
        </com.example.applicationlock.lock.widget.ImageLockView>

        <TextView
            android:id="@+id/tv_tip_of_set_pw"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/text_tip_of_set_pw"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:textStyle="bold">
        </TextView>

        <TextView
            android:id="@+id/tv_other_lock_way"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="40dp"
            android:text="@string/text_other_pw"
            android:gravity="center"
            android:textColor="@color/blue_light"
            android:textSize="15sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:id="@+id/btn_content"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_redraw"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_redraw"
                android:textSize="15sp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
            </Button>

            <Button
                android:id="@+id/btn_ensure"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:enabled="false"
                android:textSize="15sp"
                android:text="@string/text_btn_ensure"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp">
            </Button>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>